--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "immer": "^9.0.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "7.43",
     "react-icons": "^4.7.1",
     "styled": "^1.0.0",
     "styled-components": "^6.1.11"
