--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.9.11",
     "@types/styled-components": "^5.1.34",
     "bootstrap": "^5.2.3",
     "components": "^0.1.0",
@@ -18,7 +19,8 @@
     "react-hook-form": "7.43",
     "react-icons": "^4.7.1",
     "styled": "^1.0.0",
-    "styled-components": "^6.1.11"
+    "styled-components": "^6.1.11",
+    "zod": "^3.20.6"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
