--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^2.9.11",
     "@types/styled-components": "^5.1.34",
+    "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "components": "^0.1.0",
     "immer": "^9.0.19",
